# terminal-tube

./: .gitignore  Cargo.toml  readme.md  yt_livechat.py
.cargo/: .global-cache
.cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: ratatui-0.28.1.crate
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/js/-s/: js-sys
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/wa/sm/: wasm-bindgen  wasm-bindgen-futures  wasm-bindgen-macro  wasm-bindgen-macro-support  wasm-bindgen-shared
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/we/b-/: web-sys
src/: main.rs  oauth.rs  tui.rs  youtube.rs
